gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test21665.d
version https://git-lfs.github.com/spec/v1
oid sha256:41ab17546f954c484f24028553e272e222086391f8a3395b462b7de88bf1faef
size 607
